adding purge option
